# 3D-Models-engine-in-SDL2

./: CMakeCache.txt  CMakeLists.txt  Engine3D  Makefile  README.md  README.txt  cmake_install.cmake  main  main.cpp
Models/: cone.3de  cube.3de  inter_cube.3de  inter_sphere.3de  line_sphere.3de  point_cube.3de  point_sphere.3de  pyramid.3de  random_line.3de  random_points.3de  spiral.3de  text.3de
generators/: e3d_constructor.py  gencone.py  genfilledcube.py  geninterconnected_cube.py  genintersphere.py  genpointcube.py  genrand_line.py  genrand_points.py  gensphere.py  gensphere_line.py  genspiral.py  gentext.py
incl/: Component.h  Drawable.h  FileReader.h  Line.h  Model.h  Point.h  Session.h  constants.h
src/: Component.cpp  Drawable.cpp  FileReader.cpp  Line  Line.cpp  Model  Model.cpp  Point.cpp  Session.cpp
tools/: e3d_constructor.py
